--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,6 +16,7 @@ openai==0.27.0
 packaging==23.0
 pathspec==0.11.0
 platformdirs==3.1.0
+python-decouple==3.8
 requests==2.28.2
 sqlparse==0.4.3
 tomli==2.0.1
